--- a/First Website/firstwebsite.html
+++ b/First Website/firstwebsite.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html> <!-- selects which version of html you want to you use-->
+
+<html> <!-- tells browser where your html code starts and ends-->
+
+<head> <!-- contains things for your browser to think about -->
+	<title>First Website</title>
+	<style>
+		h1 {
+			color: blue;
+	}
+	
+	</style>
+</head>
+
+<body> <!-- contains the content of the webpage-->
+
 <h1>Maxwell Dorrington</h1>
 
 <p>Hi, I'm Maxwell Dorrington, I am 14 years old and I love video games and have been playing video games since I remember, my favorite video game right now is "Star Wars Jedi: Fallen Order", I also play guitar. I have a 
@@ -5,28 +21,23 @@ brother named Quentin and a small dog named crusher(a cockapoo), I went to South
 
 <h3><p>3 things I like:</p></h3>
 <ul>
-<li>Building computers</li>
-<li>Minecraft</li>
-<li>Starwars</li> 
+	<li>Building computers</li>
+	<li>Minecraft</li>
+	<li>Starwars</li> 
 </ul>
 
 <h3><p>3 thing I don't like:</P></h3>
 <ul>
-<li>Stepping on Lego</li> 
-<li>Chalkboard scrapping</li> 
-<li>game lagging</li> 
+	<li>Stepping on Lego</li> 
+	<li>Chalkboard scrapping</li> 
+	<li>game lagging</li> 
 </ul>
 
 <h4><p> Link to a cool <a href="https://www.nvidia.com/en-us/geforce/">website</a>: </p></h4>
-
- 
-<h4><p>Link to a cool video</a>:</p></h4>
+<p>Link to a cool video</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qr7auTswRF8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
-
-
-
 <h3>Cool pic :)</h3>
-
 <img src="babyyoda.jpg">
+</body>
+
+</html>
