--- a/First Website/firstwebsite.html
+++ b/First Website/firstwebsite.html
@@ -5,14 +5,99 @@
 <head> <!-- contains things for your browser to think about -->
 	<title>First Website</title>
 	<style>
+		
+
+		a:link {
+
+		color: blue;
+		
+
+	}
+
+
+
+		a: visited {
+		color: pink
+		
+
+	}
+
+		
+		a: hover {
+		background-color: pink
+		color: red;
+
+	}
+
+
+		a: active{
+		color: blue;
+
+
+	}
+
+		h1, h2, h3, h4 , h5{
+		color: blue;
+	}
+		
 		h1 {
-			color: blue;
+		font-size: 100pt;
 	}
 	
+		h3 {
+		font-size: 20pt;
+		
+	}	
+	
+		p {
+		color: blue;
+	}
+	
+		a {
+		color: blue;
+	}	
+	
+		body {
+		background-color: violet;
+		background-image: url('bluecolor.png');
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: centre;
+		background-attachment: fixed;
+		font-family: Arial;
+		color: Blue
+		font-size: 16pt
+	}
+
+		div {
+		s: silver;
+		border: 10px solid blue;
+		margin-left: auto; 
+		margin-right: auto;
+		margin-top: 0px;
+		padding: 30px;
+		width: 800px;
+		border-radius: 75px;
+	}	
+	
+
+
+		float: left;
+		margin-right: 20px;
+		margin-bottom: 10px;
+		margin-top: 25px;
+		border: 5px solid blue
+		
+	}
+		
 	</style>
 </head>
 
 <body> <!-- contains the content of the webpage-->
+
+<div>
+
+<img src="yoda.jpg">
 
 <h1>Maxwell Dorrington</h1>
 
@@ -36,8 +121,13 @@ brother named Quentin and a small dog named crusher(a cockapoo), I went to South
 <h4><p> Link to a cool <a href="https://www.nvidia.com/en-us/geforce/">website</a>: </p></h4>
 <p>Link to a cool video</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qr7auTswRF8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h3>Cool pic :)</h3>
-<img src="babyyoda.jpg">
+
 </body>
 
+</div>
+
 </html>
+	
+	
+
+
